--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 </style>
 </head>
-<body>
+<body style="background:green">
+	<p2>Welcome to my business</p2>
+</body>
