--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
+
 </style>
 </head>
 <body style="background:green">
 	<p2>Welcome to my business</p2>
 </body>
+</html>
